--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-cookies": "^0.1.4",
+    "axios": "^1.8.4",
+    "less": "^4.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-cookies": "^0.1.1",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -24,6 +30,8 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "unplugin-auto-import": "^19.1.1",
+    "vite": "^6.2.0",
+    "vite-plugin-pages": "^0.32.5"
   }
 }
