--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@types/react-cookies": "^0.1.4",
+    "antd": "^5.24.4",
     "axios": "^1.8.4",
-    "less": "^4.2.2",
+    "dayjs": "^1.11.13",
+    "i18next": "^24.2.3",
     "react": "^19.0.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.0"
+    "react-i18next": "^15.4.1",
+    "react-router-dom": "^7.4.0",
+    "sass": "^1.86.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
