--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/icons": "^5.6.1",
     "@types/react-cookies": "^0.1.4",
     "antd": "^5.24.4",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "i18next": "^24.2.3",
+    "mammoth": "^1.9.0",
     "react": "^19.0.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^19.0.0",
