--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.13",
     "i18next": "^24.2.3",
     "mammoth": "^1.9.0",
+    "p-limit": "^6.2.0",
     "react": "^19.0.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^19.0.0",
